--- a/.gitignore
+++ b/.gitignore
@@ -194,11 +194,11 @@ publish/
 # in these scripts will be unencrypted
 PublishScripts/
 
-# NuGet Packages
+# NuGet package
 *.nupkg
-# NuGet Symbol Packages
+# NuGet Symbol package
 *.snupkg
-# The packages folder can be ignored because of Package Restore
+# The package folder can be ignored because of Package Restore
 **/[Pp]ackages/*
 # except build/, which is used as an MSBuild target.
 !**/[Pp]ackages/build/
@@ -320,7 +320,7 @@ __pycache__/
 
 # Cake - Uncomment if you are using it
 # tools/**
-# !tools/packages.config
+# !tools/package.config
 
 # Tabs Studio
 *.tss
